# ingescape

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile.am  README.md  autogen.sh  bootstrapSysrootAndGenerateXcodeProjects.sh  bootstrap_sysroot.bat  bootstrap_sysroot.sh  cloneFromIngescapeGitlab.sh  configure.ac  debug.ps1  install_on_system.bat  install_on_system.sh  license.xml  project.xml  readme.txt  update_i2quick.sh  win32_cmake_build.bat
applications/apps/IngeScape-Assessments/: CMakeLists.txt  IngeScape-Assessments.pro  macos-Info.plist.in  main.cpp  qml.qrc
applications/apps/IngeScape-Assessments/controller/: assessmentsmodelmanager.cpp  assessmentsmodelmanager.h  experimentationcontroller.cpp  experimentationcontroller.h  experimentationslistcontroller.cpp  experimentationslistcontroller.h  ingescapeassessmentscontroller.cpp  ingescapeassessmentscontroller.h  networkcontroller.cpp  networkcontroller.h
applications/apps/IngeScape-Assessments/model/: actionassessmentm.cpp  actionassessmentm.h  assessmentsenums.cpp  assessmentsenums.h  eventm.cpp  eventm.h  experimentationm.cpp  experimentationm.h  recordassessmentm.cpp  recordassessmentm.h  sessionm.cpp  sessionm.h  taskinstancem.cpp  taskinstancem.h
applications/apps/IngeScape-Assessments/qml/: IngeScapeAssessments.qml  main.qml
applications/apps/IngeScape-Assessments/settings/: IngeScape-Assessments.ini
applications/apps/IngeScape-Assessments/sortFilter/: areagentsinplatformfilter.cpp  areagentsinplatformfilter.h  aresubjectandprotocolinsessionfilter.cpp  aresubjectandprotocolinsessionfilter.h
bindings/c#/IngescapeCSharpWrapper/IngescapeCSharp/: CMakeLists.txt  CallArgument.cs  Class1.cs  FixCmakeSolution.ps1  Ingescape.cs  IngescapeCSharp.csproj
bindings/csharp/: .gitignore  CMakeLists.txt  IngescapeCSharp - Backup.csproj  IngescapeCSharp.csproj  IngescapeCSharpWrapper.sln  README.md
bindings/csharp/IngescapeCSharpWrapper/: .gitignore  IngescapeCSharpWrapper.sln
bindings/csharp/IngescapeCSharpWrapper/IngescapeCSharp/: CMakeLists.txt  FixCmakeSolution.ps1  Helpers.cs  IgsAgent.cs  Ingescape.cs  IngescapeCSharp.csproj  ServiceArgument.cs
bindings/csharp/builds/cmake/: AssemblyInfo.cs.in
bindings/csharp/builds/visual-studio/: IngescapeCSharp.csproj  IngescapeCSharpWrapper.sln
bindings/csharp/examples/CSharpSampleUnity/: README.md
bindings/csharp/examples/CSharpSampleWPF/: App.xaml.cs  CSharpSampleWPF.cs
bindings/csharp/examples/unity/: README.md
bindings/csharp/examples/wpf/: App.xaml  App.xaml.cs  CSharpSampleWPF.sln  MainWindow.xaml  MainWindow.xaml.cs  README.md  WPFAgent.cs  WPFAgent.sln
bindings/csharp/src/: Enums.cs  Helpers.cs  IgsAgent.cs  Ingescape.cs  ServiceArgument.cs
bindings/csharp/test/: CMakeLists.txt  igstester.csproj
bindings/csharp/test/Properties/: AssemblyInfo.cs
bindings/csharp/test/cmake/: DllFromLib.cmake  FindIngescapeCSharp.cmake
bindings/csharp/test/src/: test.cs
editor/apps/IngeScape-Assessments/: CMakeLists.txt  IngeScape-Assessments.pro  icon_Assessments.icns  icon_IGS.icns  main.cpp  qml.qrc  stable.h
editor/apps/IngeScape-Assessments/controller/: assessmentsmodelmanager.cpp  assessmentsmodelmanager.h  experimentationcontroller.cpp  experimentationcontroller.h  experimentationslistcontroller.cpp  experimentationslistcontroller.h  ingescapeassessmentscontroller.cpp  ingescapeassessmentscontroller.h  ingescapemodelmanager.cpp  ingescapemodelmanager.h  networkcontroller.cpp  networkcontroller.h
editor/apps/IngeScape-Assessments/model/: assessmentsenums.cpp  assessmentsenums.h  experimentationm.cpp  experimentationm.h  experimentationrecordm.cpp  experimentationrecordm.h  recordm.cpp  recordm.h  recordsetupm.cpp  recordsetupm.h  taskinstancem.cpp  taskinstancem.h
editor/apps/IngeScape-Assessments/qml/: ExperimentationView.qml  ExperimentationsListView.qml  IngeScapeAssessments.qml  LoadingScreen.qml  Record.qml  main.qml
editor/apps/IngeScape-Assessments/settings/: IngeScape-Assessments.ini
editor/apps/IngeScape-Editor/: CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  IngeScape-Editor.pro  icon.icns  macos-Info.plist  main.cpp  qml.qrc  stable.h  win32_cmake_build.bat
editor/apps/IngeScape-Editor/controller/: abstracttimeactionslinescenarioviewcontroller.cpp  abstracttimeactionslinescenarioviewcontroller.h  actioneditorcontroller.cpp  actioneditorcontroller.h  agentsmappingcontroller.cpp  agentsmappingcontroller.h  agentssupervisioncontroller.cpp  agentssupervisioncontroller.h  editormodelmanager.cpp  editormodelmanager.h  hostssupervisioncontroller.cpp  (+17 more)
ingeprobe/: CMakeLists.txt  ingeprobe.pro
ingeprobe/builds/cmake/: NSIS.template.in
ingeprobe/dependencies/windows/: getopt.h
ingeprobe/ingeprobe/: main.c  zregex.c  zregex.h
ingeprobe/ingeprobe.xcodeproj/: project.pbxproj
ingeprobe/src/: Makefile  call.c  call.h  main.c
src/: Makefile  Makefile.am  admin.c  agent.c  bus.c  call.c  core.c  definition.c  global.c  igs_admin.c  igs_agent.c  igs_bus.c  igs_call.c  igs_channels.c  igs_core.c  igs_definition.c  igs_json.c  igs_json_node.c  igs_license.c  igs_mapping.c  igs_model.c  igs_monitor.c  igs_network.c  igs_parser.c  igs_performance.c  igs_replay.c  igs_service.c  igs_split.c  igsagent.c  ingescape_classes.h  ingescape_private_selftest.c  ingescape_selftest.c  json.c  kvsimple.c  libingescape.pc.in  license.c  mapping.c  model.c  monitor.c  mtic_definition.c  (+29 more)
src/include/: definition.h  ingescape.h  ingescape_advanced.h  ingescape_agent.h  ingescape_private.h  kvsimple.h  mapping.h  mastic.h  mastic_advanced.h  mastic_private.h  mastic_public.h  model.h  mtic_definition.h  mtic_mapping.h  mtic_mastic.h  mtic_model.h  mtic_network.h  mtic_parser.h  mtic_tests.h  network.h  parser.h  tests.h
src/uthash/: uthash.h  utlist.h  utstring.h
test/: CMakeLists.txt
test/builds/cmake/: Findczmq.cmake  Findsodium.cmake  IdentifyOS.cmake  NSIS.template.in
test/resources/: partner.cert
test/src/: common.c  common.h  partner.c  stresser.c  tester.c
(+1745 files in other folders)
